# starlight

./: Cargo.toml  README.md
.github/workflows/: rust-clippy.yml  rust.yml
src/: canvas.rs  main.rs  settings.rs
src/engine/: mod.rs  ray_tracer.rs
src/primitives/: color.rs  matrix.rs  matrix2.rs  matrix3.rs  matrix4.rs  mod.rs  point.rs  tuple.rs  vector.rs
src/renderer/: bucket.rs  mod.rs  settings.rs
src/utils/: eq.rs  mod.rs
