[package]
name = "starlight"
version = "0.2.0"
edition = "2021"
authors = ["Nicholas Stienz <nickstienz@gmail.com>"]
description = "A fun ray tracer written in Rust"
repository = "https://github.com/nickstienz/starlight"
license = "GPL-3.0-only"

[dependencies]
pixels = "0.13.0"
rand = "0.8.5"
rayon = "1.7.0"
winit = "0.28.3"
